# telegram_openai_whisper_api_transcriber

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  goodsecretarybot.py  logout.sh  pyproject.toml  readme.md  requirements.txt
src/: db.py  goodsecretarybot.py  messages.py  transcribe.py
src/bot/: models.py
src/bot/handlers/: payment.py  voice.py
src/bot/services/: file_processor.py  transcribe.py
src/config/: settings.py
telegram-bot-api/: Dockerfile  docker-entrypoint.sh
