[project]
name = "telegram-openai-whisper-api-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "elevenlabs>=2.16.0",
    "openai>=2.0.1",
    "python-magic>=0.4.27",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
    "sentry-sdk>=2.39.0",
    "sqlalchemy>=2.0.43",
]
